src/styles/index.scss
/* ... */
table {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.45rem;
    font-size: 1rem;
    line-height: 1.45rem;
    border-collapse: collapse;
    width: 100%;
}

fieldset {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.45rem;
}

blockquote {
    margin-left: 1.45rem;
    margin-right: 1.45rem;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.45rem;
}

form {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.45rem;
}

noscript {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.45rem;
}

iframe {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.45rem;
}

hr {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: calc(1.45rem - 1px);
    background: hsla(0, 0%, 0%, 0.2);
    border: none;
    height: 1px;
}

address {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    margin-bottom: 1.45rem;
}

b {
    font-weight: bold;
}

strong {
    font-weight: bold;
}

dt {
    font-weight: bold;
}

th {
    font-weight: bold;
}

li {
    margin-bottom: calc(1.45rem / 2);
}

ol li {
    padding-left: 0;
}

ul li {
    padding-left: 0;
}

li>ol {
    margin-left: 1.45rem;
    margin-bottom: calc(1.45rem / 2);
    margin-top: calc(1.45rem / 2);
}

li>ul {
    margin-left: 1.45rem;
    margin-bottom: calc(1.45rem / 2);
    margin-top: calc(1.45rem / 2);
}

blockquote *:last-child {
    margin-bottom: 0;
}

li *:last-child {
    margin-bottom: 0;
}

p *:last-child {
    margin-bottom: 0;
}

li>p {
    margin-bottom: calc(1.45rem / 2);
}

code {
    font-size: 0.85rem;
    line-height: 1.45rem;
}

kbd {
    font-size: 0.85rem;
    line-height: 1.45rem;
}

samp {
    font-size: 0.85rem;
    line-height: 1.45rem;
}

abbr {
    border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
    cursor: help;
}

acronym {
    border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
    cursor: help;
}

abbr[title] {
    border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
    cursor: help;
    text-decoration: none;
}

thead {
    text-align: left;
}

td,
th {
    text-align: left;
    border-bottom: 1px solid hsla(0, 0%, 0%, 0.12);
    font-feature-settings: "tnum";
    -moz-font-feature-settings: "tnum";
    -ms-font-feature-settings: "tnum";
    -webkit-font-feature-settings: "tnum";
    padding-left: 0.96667rem;
    padding-right: 0.96667rem;
    padding-top: 0.725rem;
    padding-bottom: calc(0.725rem - 1px);
}

th:first-child,
td:first-child {
    padding-left: 0;
}

th:last-child,
td:last-child {
    padding-right: 0;
}

tt,
code {
    // background-color: var(--secondaryBg);
    border-radius: 3px;
    font-family: "SFMono-Regular", Consolas, "Roboto Mono", "Droid Sans Mono",
        "Liberation Mono", Menlo, Courier, monospace;
    padding: 0;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
}

pre code {
    background: none;
    line-height: 1.42;
}

code:before,
code:after,
tt:before,
tt:after {
    letter-spacing: -0.2em;
    content: " ";
}

pre code:before,
pre code:after,
pre tt:before,
pre tt:after {
    content: "";
}

.language-text {
    background-image: linear-gradient(to bottom,  var(--secondaryBgHeavy) 50%,  var(--secondaryBgHeavy)) !important;
    color: var(--textNormal) !important;
    text-shadow: none !important;
}


@media only screen and (max-width: 480px) {
    html {
        font-size: 100%;
    }
}

@mixin link {
    color: var(--textLink);
    font-weight: bold;
    text-decoration: none;
    border-bottom: solid 2px transparent;
    transition: border-bottom-color 0.3s ease-in-out;
    &:hover {
        border-bottom-color: var(--textLink);
    }
    
}

.svg-inline--fa {
    width: 1em;
    height: 1em;
    vertical-align: -0.125em;
}

.Cursor {
    opacity: 0.25;
}

:root{ 
  --custom-red: #e74c3c;
}

body {
    --bg: #fff;
    --secondaryBg: #fff;
    --secondaryBgHeavy: #fff;
    --textNormal: #222;
    --lightText: rgba(0,0,0,0.2);
    --lighterText: rgba(0,0,0,0.2);
    --textLink: rgb(139, 139, 143);
    --hr: hsla(0, 0%, 0%, 0.2);
  
    background-color: var(--bg);
  }
  
  body.dark {
    -webkit-font-smoothing: antialiased;
  
    --bg: rgb(21, 32, 43);
    --secondaryBg: #243447;
    --secondaryBgHeavy: #eee;
    --textNormal: rgba(255, 255, 255, 0.88);
    --lightText: rgba(255,255,255,0.5);
    --lighterText: rgba(255,255,255,0.2);
    --textLink: rgb(29, 161, 242);
    --hr: hsla(0, 0%, 100%, 0.2);
  }
  

